@@ -11,30 +11,6 @@ Then /^I should be on the success page$/ do
   @page.title.should == 'Success'
 end
 
-Then /^I should be able to submit the form$/ do
-  @element.submit
-end
-
-When /^I locate the form by "([^\"]*)"$/ do |how|
-  @element = @page.send "form_#{how}_element"
-end
-
-When /^I locate the form using "([^"]*)" and "([^"]*)"$/ do |param1, param2|
-  @element = @page.send "form_#{param1}_#{param2}_element"
-end
-
-When /^I get the text from the list item$/ do
-  @text = @page.li_id
-end
-
-When /^I search for the list item by "([^\"]*)"$/ do |how|
-  @text = @page.send "li_#{how}"
-end
-
-When /^I search for the list item by "([^"]*)" and "([^"]*)"$/ do |param1, param2|
-  @text = @page.send "li_#{param1}_#{param2}"
-end
-
 When /^I get the first item from the unordered list$/ do
   @element = @page.ul_id_element[0]
 end
