@@ -1,7 +1,7 @@
 === Version 0.2.5
 * Enhancements
   * #attach_to_window takes an optional block - will return to calling window after block executes
-  * Added the following instance methods to PageObject
+  * Added the following instance methods to PageObject via ElementLocators
     * #button_element
     * #text_field_element
     * #hidden_field_element
@@ -15,6 +15,8 @@
     * #table_element
     * #cell_element
     * #image_element
+    * #form_element
+    * #list_item_element
   * Updated to use selenium-webdriver 2.4.0
   * Updated to use watir-webdriver 0.3.2
 
